--- a/products/products/pom.xml
+++ b/products/products/pom.xml
@@ -54,6 +54,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
